# pan-collector

./: config.json  config_template.json  pyproject.toml  requirements.txt
doc/: user_id_config_items.md
src/: main.py
src/pan_collector/: launch.py  main.py
